tests/compile-fail/suzunari_error_tuple_struct.stderr
error: suzunari_error can only be used on structs with named fields
 --> tests/compile-fail/suzunari_error_tuple_struct.rs:6:22
  |
6 | pub struct TupleError(String);
  |                      ^^^^^^^^
